bg on mobile fix

--- a/css/style.css
+++ b/css/style.css
@@ -465,11 +465,14 @@ h2 {
   #portfolio .rem {
     font-size: 12px;
   }
+  #portfolio .header {
+    background-attachment: initial;
+  }
   #portfolio .header__photo img {
     border-radius: 50%;
   }
   #portfolio .header__title {
-    padding: 115px 0 50px;
+    padding: 115px 0 20px;
   }
   #portfolio .w-20 {
     width: 85%;
