--- a/sass/modules/_media.scss
+++ b/sass/modules/_media.scss
@@ -57,13 +57,14 @@
         font-size: 12px;
     }
     .header {
+         background-attachment: initial;
         &__photo {
             img {
                 border-radius: 50%;
             }
         }
         &__title {
-            padding: 115px 0 50px;
+            padding: 115px 0 20px;
         }
     }
     .w-20 {
